lab 2/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      #nodeSelector:
      #  machine: QA
      containers:
        - name: nginx
          image: nginx:1.15.12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: conf-dir
              mountPath: /etc/nginx/conf.d
            - name: log-dir
              mountPath: /app/applog/nginx/logs/

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: conf-dir
          hostPath:
            path: /app/conf/nginx
            type: Directory
        - name: site-dir
          hostPath:
            path: /app/webroot/
            type: Directory
        - name: log-dir
          hostPath:
            path: /app/log/nginx
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
