lab 2/sales-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sales-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/v1/order"
            backend:
              service:
                name: sales-order
                port:
                  number: 8080
